# ISOmodel

./: .dockerignore  .gitignore  .gitignore.swp  Dockerfile  Doxyfile  LICENSE.txt  README.md  SmallOffice.ism  dayofweek.txt  hourbyhour.csv  hourvsmonth_2015-02-04.csv  launch_docker.sh  openstudio_integration.md
.github/: pull_request.yml
.github/workflows/: pull_request.yml
IsoModel/: .cproject  .gitignore  .project  CMakeCache.txt  COMPILING.txt  COMPILING_old_instructions.txt  ISOHourly.sln  ISOHourly.vcxproj  ISOHourly.vcxproj.filters  README.md  Setup and compiling using  WSL.md  Setup and compiling using  WSL.txt  compiling with vs_2017_community edition.docx  compiling with vs_2022.docx  compiling with vs_2022_no_googletest_download.docx  compiling_03-22-18_T430s.txt
IsoModel/.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
IsoModel/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
IsoModel/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
IsoModel/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
IsoModel/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
IsoModel/.metadata/.plugins/org.eclipse.linuxtools.cdt.libhover/C/: devhelp.libhover
IsoModel/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.gdnapt_0/: node.properties
IsoModel/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.gdnapt_0/FP.local.files_0/: node.properties
IsoModel/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.gdnapt_0/H.local_16/: node.properties
IsoModel/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
IsoModel/src/: Building.cpp  Building.hpp  CMakeLists.txt  ConanInstall.cmake  Constants.hpp  Cooling.cpp  Cooling.hpp  EndUses.hpp  EpwData.cpp  EpwData.hpp  ForwardTranslator.cpp  ForwardTranslator.hpp  Heating.cpp  Heating.hpp  HourlyModel.cpp  HourlyModel.hpp  ISOHourly.cpp  ISOHourly.hpp  ISOModel.i  ISOModelAPI.hpp  ISOResults.cpp  ISOResults.hpp  Lighting.cpp  Lighting.hpp  Location.cpp  Location.hpp  MathHelpers.hpp  Matrix.hpp  MonthlyModel.cpp  MonthlyModel.hpp  MonthlyModelHelpers.hpp  PhysicalQuantities.cpp  PhysicalQuantities.hpp  Population.cpp  Population.hpp  ProjectMacros.cmake  Properties.cpp  Properties.hpp  SimModel.cpp  SimModel.hpp  (+19 more)
IsoModel/src/Python/: CMakeLists.txt  test.py
IsoModel/src/Ruby/: CMakeLists.txt  test.rb
IsoModel/src/Test/: CMakeLists.txt  HourlyModel_GTest.cpp  ISOHourlyTest.cpp  ISOHourly_GTest.cpp  ISOModelFixture.cpp  ISOModelFixture.hpp  ISOModel_Benchmark.cpp  ISOModel_GTest.cpp  MonthlyModel_GTest.cpp  PropertiesTest.cpp  Properties_GTest.cpp  SimModelTest.cpp  SimModel_GTest.cpp  SolarRadiationTest.cpp  SolarRadiation_GTest.cpp  TestEnvironment.h  TestEnvironment.hpp  TimeFrameTest.cpp  TimeFrame_GTest.cpp  UserModelTest.cpp  UserModel_GTest.cpp  solar_debug.cpp
IsoModel/src/isomodel/: Building.hpp  Cooling.hpp  EpwData.hpp  Heating.hpp  ISOHourly.hpp  Lighting.hpp  Location.hpp  Population.hpp  SimModel.hpp  SolarRadiation.hpp  Structure.hpp  UserModel.hpp  WeatherData.hpp
IsoModel/src/old/: Cooling.cpp  Lighting.cpp  Matrix.hpp  SimulationSettings.cpp  Vector.hpp
IsoModel/test_data/: SmallOffice_v1.ism  SmallOffice_v1.ism_for_comparison  SmallOffice_v2.ism  SmallOffice_v2_ism.yaml  defaults_test_building.ism  defaults_test_building_ism.yaml  defaults_test_defaults.ism  defaults_test_defaults_ism.yaml  ism_props_for_testing_umodel_init.ism  ism_props_for_testing_umodel_init_v1.ism  ism_props_for_testing_umodel_init_v2.ism  ism_props_for_testing_umodel_init_v2_ism.yaml  isomodel_template.xlsx  optional_defaults.ism  optional_defaults_override_ism.yaml  test_bldg.yaml  test_properties.props
IsoModel/test_data/hand_calcs/: solar_hand_calcs.ipynb
IsoModel/test_data/hand_calcs/.ipynb_checkpoints/: solar_hand_calcs-checkpoint.ipynb
IsoModel/test_data/old/: optional_defaults_override.ism  warehouse_ohare_new2004_ism.yaml
SimulationResults/: formattingtest.txt  formattingtest2.txt  laptopresults2.txt  results.txt  results2.txt  results3.txt  results4.txt  resultsLight.txt  results_with_map.txt  resultskWh.txt
